<resources>
    <string name="app_name">Application</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="testing">TESTING</string>
    <string name="time">TIME:</string>
    <string name="textview">TextView</string>
    <string name="timer">Timer:</string>
    <string name="_0">0</string>
    <string name="clicks">Clicks:</string>
    <string name="reset_game">Reset Game</string>
    <string name="_00_00">00.00</string>
    <string name="timertext">Timer:</string>
    <string name="you_win">YOU WIN!!!</string>
    <string name="total_time">Total Time:</string>
    <string name="your_score">Your Score:</string>
    <string name="number_of_clicks">Number Of Clicks:</string>
    <string name="restart_game">Restart Game</string>
    <string name="play_again">Play Again</string>
</resources>